# SmartHomeHub

./: readme.md
src/ESP8266/main/: .gitignore  main.ino
src/QT/main/: .gitignore  CMakeLists.txt  EMQX_Serverless_连接注意事项.txt  MqttConfig.cpp  MqttConfig.h  configuration.cpp  configuration.h  configuration.ui  main.cpp  pic.qrc  widget.cpp  widget.h  widget.ui
src/STM32/main/: .gitignore  .mxproject  CMakeLists.txt  main.ioc
src/STM32/main/Core/Inc/: Font.h  aht20.h  main.h  oled.h  usart.h
src/STM32/main/Core/Src/: Font.c  aht20.c  gpio.c  i2c.c  main.c  oled.c  stm32f1xx_it.c  usart.c
src/STM32/main/cmake/stm32cubemx/: CMakeLists.txt
